--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+#iOS
+kotlin.native.cacheKind.iosArm64=none
+kotlin.apple.xcodeCompatibility.nowarn=true
