separet layer for action and chat

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ android.useAndroidX=true
 #iOS
 kotlin.native.cacheKind.iosArm64=none
 kotlin.apple.xcodeCompatibility.nowarn=true
+parallelRendering=true
