--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,15 +9,15 @@ androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.6"
 androidx-testExt = "1.3.0"
-composeMultiplatform = "1.10.0"
+composeMultiplatform = "1.11.0-alpha02"
 junit = "4.13.2"
-kotlin = "2.3.0"
-mediapipe = "0.10.29"
+kotlin = "2.3.10"
+mediapipe = "0.10.32"
 kotlinxCoroutines = "1.10.2"
 kotlinxSerialization = "1.10.0"
 navigationCompose = "2.9.1"
 kotlinxDatetime = "0.7.1"
-calf = "0.6.1"
+calf = "0.9.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
