--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -4,13 +4,10 @@ platform :ios, '15.0'
 use_frameworks!
 
 target 'iosApp' do
-  # Kotlin Multiplatform generated pod
   pod 'composeApp', :path => '../composeApp'
 
-  # MediaPipe LLM Inference Task (used by Swift code only)
-  # Using version 0.10.18 which has the correct Swift API
-  pod 'MediaPipeTasksGenAI', '0.10.18'
-  pod 'MediaPipeTasksGenAIC', '0.10.18'
+  pod 'MediaPipeTasksGenAI', '0.10.24'
+  pod 'MediaPipeTasksGenAIC', '0.10.24'
 end
 
 post_install do |installer|
@@ -19,6 +16,7 @@ post_install do |installer|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
       config.build_settings['SWIFT_VERSION'] = '5.0'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
   end
 end
